<resources>
    <string name="app_name">Clime</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="city_id">City ID</string>
    <string name="weather_by_id">WEATHER BY ID</string>
    <string name="weather_by_name">WEATHER BY NAME</string>
    <string name="city_name">City Name...</string>
    <string name="get_city_id">Get city id</string>
    <string name="search">search...</string>
</resources>