<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    tools:Context=".MainActivity">

    <Button
        android:id="@+id/btn_city_by_id"
        android:layout_width="0dp"
        android:singleLine="false"
        android:layout_height="wrap_content"
        android:text="@string/city_id"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:padding="0dp"
        android:autoSizeTextType="uniform"
        tools:targetApi="o"
        app:layout_constraintEnd_toStartOf="@id/btn_weather_by_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />


    <Button
        android:id="@+id/btn_weather_by_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_by_id"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:autoSizeTextType="uniform"
        tools:targetApi="o"
        app:layout_constraintStart_toEndOf="@id/btn_city_by_id"
        app:layout_constraintEnd_toStartOf="@id/btn_weather_by_name"
        app:layout_constraintTop_toTopOf="@id/btn_city_by_id"
         />

    <Button
        android:id="@+id/btn_weather_by_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:padding="0dp"
        android:singleLine="false"
        android:autoSizeTextType="uniform"
        tools:targetApi="o"
        android:text="@string/weather_by_name"
        app:layout_constraintStart_toEndOf="@id/btn_weather_by_id"
        app:layout_constraintTop_toTopOf="@id/btn_weather_by_id"
        app:layout_constraintEnd_toEndOf="parent"
        style="?android:attr/borderlessButtonStyle"
        />

    <EditText
        android:id="@+id/et_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/city_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_weather_by_id"
        android:autofillHints="" />

    <ListView
        android:id="@+id/lv_weather_reports"
        android:layout_width="409dp"
        android:layout_height="628dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:autoSizeTextType="uniform"
        tools:targetApi="o"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_input" />
</androidx.constraintlayout.widget.ConstraintLayout>